[gd_scene load_steps=23 format=3 uid="uid://i7r7djcr47tj"]

[ext_resource type="Texture2D" uid="uid://cr7wy2626jnfq" path="res://Sprites/Enemies/Wlaker Bot.png" id="1_bam6j"]
[ext_resource type="Script" path="res://Scripts/Common Entity Scripts/HealthComponent.gd" id="1_qkgqj"]
[ext_resource type="Script" path="res://Scripts/Common Entity Scripts/AttackComponent.gd" id="2_qx1kk"]
[ext_resource type="Script" path="res://Scripts/CollisionSwitch.gd" id="3_a1feb"]
[ext_resource type="Shader" uid="uid://dp5korylg2ywq" path="res://Scripts/Common Entity Scripts/Hitflash_shader.tres" id="5_0lmoo"]
[ext_resource type="Script" path="res://Scripts/Enemies/EnemyStateMachine.gd" id="5_7caw0"]
[ext_resource type="AudioStream" uid="uid://c7hdbwq2aa0us" path="res://SFX/Enemies/WalkerBot_footstep.wav" id="5_cd8qq"]
[ext_resource type="AudioStream" uid="uid://bcjkcbh0k37vg" path="res://SFX/Enemies/Walker_Bot_taking_Damage.wav" id="6_jy48y"]
[ext_resource type="AudioStream" uid="uid://cvhb3jdm30spm" path="res://SFX/Enemies/Bot_Death_Beep.wav" id="7_23h5g"]
[ext_resource type="AudioStream" uid="uid://dmam76yau62bu" path="res://SFX/Enemies/WalkerBot_death.wav" id="7_lir7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oqmi"]
size = Vector2(13, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5xgy"]
size = Vector2(11, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqnxt"]
radius = 4.0
height = 68.0

[sub_resource type="Animation" id="Animation_oqttw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WlakerBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ik5nu"]
resource_name = "death"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WlakerBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32, 47]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackComponent/Contact/CollisionSwitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Turn_Off"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathPing:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.6, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyStateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Play_Death_Sound"
}]
}

[sub_resource type="Animation" id="Animation_02cpt"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WlakerBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_p2bhe"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WlakerBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyStateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"Play_Step_Sound"
}, {
"args": [],
"method": &"Play_Step_Sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jxh58"]
_data = {
"RESET": SubResource("Animation_oqttw"),
"death": SubResource("Animation_ik5nu"),
"idle": SubResource("Animation_02cpt"),
"move": SubResource("Animation_p2bhe")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgbiw"]
resource_local_to_scene = true
shader = ExtResource("5_0lmoo")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ld84a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WlakerBot:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t55au"]
resource_name = "hitflash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WlakerBot:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../EnemyStateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Play_Damage_Sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mc484"]
_data = {
"RESET": SubResource("Animation_ld84a"),
"hitflash": SubResource("Animation_t55au")
}

[node name="WalkerBot" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 52

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("hitflash_animator")]
script = ExtResource("1_qkgqj")
hitflash_animator = NodePath("../Visuals/HitflashAnim")
max_health = 3

[node name="AttackComponent" type="Node2D" parent="." node_paths=PackedStringArray("CB2D", "contact")]
script = ExtResource("2_qx1kk")
CB2D = NodePath("..")
contact = NodePath("Contact")
dmg = 1
knockback_dealt = 130

[node name="Contact" type="Area2D" parent="AttackComponent"]
collision_layer = 0

[node name="CollisionSwitch" type="CollisionShape2D" parent="AttackComponent/Contact"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_5oqmi")
debug_color = Color(0.933333, 0, 0.286275, 0.419608)
script = ExtResource("3_a1feb")

[node name="CB2D collider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_f5xgy")

[node name="LedgeChecker" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 9)
collision_mask = 16

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("CB2D", "health", "pursue_area", "knockback_timer", "ledge_detector", "animator")]
script = ExtResource("5_7caw0")
enemy_name = "walker_bot"
CB2D = NodePath("..")
health = NodePath("../HealthComponent")
pursue_area = NodePath("../PursueArea")
knockback_timer = NodePath("../KnockBackTimer")
ledge_detector = NodePath("../LedgeChecker")
animator = NodePath("../Visuals/AnimationPlayer")
movement_speed = 15.0
death_anim_duration = 2.5
step_sound = ExtResource("5_cd8qq")
taking_damage_sound = ExtResource("6_jy48y")
death_sound = ExtResource("7_lir7k")

[node name="PursueArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PursueArea"]
position = Vector2(0, -1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_dqnxt")
debug_color = Color(0.647059, 0.772549, 0.0941176, 0.419608)

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../..")
libraries = {
"walker_bot": SubResource("AnimationLibrary_jxh58")
}

[node name="WlakerBot" type="Sprite2D" parent="Visuals"]
material = SubResource("ShaderMaterial_hgbiw")
position = Vector2(0, -4)
texture = ExtResource("1_bam6j")
hframes = 16
vframes = 3

[node name="HitflashAnim" type="AnimationPlayer" parent="Visuals"]
libraries = {
"": SubResource("AnimationLibrary_mc484")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
max_distance = 200.0
bus = &"EnemySFX"

[node name="DeathPing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_23h5g")
volume_db = -12.0
bus = &"EnemySFX"
